[project]
name = "linkedin-post-agent"
version = "0.1.0"
description = "A human-in-the-loop LinkedIn post generation workflow built with LangGraph and Groq."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Arkan Naji" }
]
dependencies = [
    "langchain-core",
    "langchain-groq",
    "langgraph",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linkedin_post_agent"]